<resources>
    <string name="app_name" translatable="false">Playlist Maker</string>
    <string name="title_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="share">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="dark_theme">Темная тема</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="no_network">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="clear_history">Очистить историю</string>
    <string name="length">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>

    <string name="share_message" translatable="false">https://practicum.yandex.ru/android-developer/</string>
    <string name="write_to_support_email" translatable="false">anton-grin@ya.ru</string>
    <string name="write_to_support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="write_to_support_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="user_agreement_link" translatable="false">https://yandex.ru/legal/practicum_offer/ru/</string>
</resources>