<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:theme="@style/Theme.PlaylistMaker.main">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop = "14dp"
        android:layout_marginBottom = "16dp"
        android:layout_marginStart="@dimen/indent_size"
        android:gravity="center|start"
        android:text="@string/title_name"
        style="@style/HeaderTextStyle"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/search_main"
        style="@style/ButtonMainStyle"
        android:text="@string/search"
        app:icon="@drawable/ic_search_24" />

    <Button
        android:id="@+id/media_library_main"
        android:text="@string/media_library"
        app:icon="@drawable/ic_music_24"
        style="@style/ButtonMainStyle" />

    <Button
        android:id="@+id/settings_main"
        android:text="@string/settings"
        app:icon="@drawable/ic_settings_24"
        style="@style/ButtonMainStyle" />

</LinearLayout>