<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="?attr/colorPrimary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimary"
        >

        <Toolbar
            android:id="@+id/toolbarPlayer"
            android:layout_width="match_parent"
            android:layout_height="@dimen/panel_header_size"

            android:navigationIcon="@drawable/ic_arrow_back_24"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp"/>

        <ImageView
            android:id="@+id/ivCover"

            android:layout_width="312dp"
            android:layout_height="@dimen/zero_size"
            android:layout_marginTop="26dp"

            app:layout_constraintTop_toBottomOf="@id/toolbarPlayer"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintDimensionRatio="1,1"

            tools:src="@drawable/barsik" />

        <TextView
            android:id="@+id/tvTrackName"
            style="@style/searchMessageTextStyle"

            android:layout_width="@dimen/zero_size"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"

            android:lines="1"
            android:ellipsize="end"
            android:textSize="22sp"

            app:layout_constraintTop_toBottomOf="@id/ivCover"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"

            tools:text="@tools:sample/lorem/random"
            />

        <TextView
            android:id="@+id/tvAlbum"
            style="@style/searchMessageTextStyle"

            android:layout_width="@dimen/zero_size"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"

            android:lines="1"
            android:ellipsize="end"
            android:textSize="14sp"

            app:layout_constraintTop_toBottomOf="@id/tvTrackName"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"

            tools:text="@tools:sample/lorem/random"
            />

        <ImageButton
            android:id="@+id/ibAdd"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="54dp"

            app:layout_constraintHorizontal_chainStyle="spread_inside"

            app:layout_constraintTop_toBottomOf="@id/tvAlbum"
            app:layout_constraintStart_toEndOf="@id/left_guideline"

            android:src="@drawable/ic_add_23"
            android:background ="@drawable/round_button"/>

        <ImageButton
            android:id="@+id/ibPlayStop"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"


            app:layout_constraintEnd_toStartOf="@+id/ibLike"
            app:layout_constraintStart_toEndOf="@id/ibAdd"
            app:layout_constraintTop_toBottomOf="@id/tvAlbum"

            android:src="@drawable/ic_play_83"
            android:background="@null" />

        <ImageButton
            android:id="@+id/ibLike"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="54dp"

            app:layout_constraintTop_toBottomOf="@id/tvAlbum"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"

            android:src="@drawable/ic_like_25"
            android:background ="@drawable/round_button" />

        <TextView
            android:id="@+id/tvTrackTimePlay"
            style="@style/searchMessageTextStyle"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"

            android:lines="1"
            app:layout_constrainedWidth="true"
            android:ellipsize="end"
            android:textSize="14sp"
            android:textFontWeight ="500"

            app:layout_constraintTop_toBottomOf="@id/ibPlayStop"
            app:layout_constraintStart_toEndOf="@id/left_guideline"
            app:layout_constraintEnd_toStartOf="@id/right_guideline"

            android:text="00:00" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/buttonGroupAlbom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="albumText,album" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/buttonGroupYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:constraint_referenced_ids="yearText,year" />

        <TextView
            style="@style/playerHeadlinesTextStyle"
            android:id="@+id/timeText"
            android:layout_marginTop="30dp"

            app:layout_constraintTop_toBottomOf="@id/tvTrackTimePlay"
            app:layout_constraintStart_toEndOf="@id/left_guideline"

            android:text="@string/length" />
        <TextView
            style="@style/playerHeadlinesTextStyle"
            android:id="@+id/albumText"

            app:layout_constraintTop_toBottomOf="@id/timeText"
            app:layout_constraintStart_toEndOf="@id/left_guideline"

            android:text="@string/album" />
        <TextView
            style="@style/playerHeadlinesTextStyle"
            android:id="@+id/yearText"

            app:layout_constraintTop_toBottomOf="@id/albumText"
            app:layout_constraintStart_toEndOf="@id/left_guideline"

            android:text="@string/year" />
        <TextView
            style="@style/playerHeadlinesTextStyle"
            android:id="@+id/genreText"

            app:layout_constraintTop_toBottomOf="@id/yearText"
            app:layout_constraintStart_toEndOf="@id/left_guideline"

            android:text="@string/genre" />
        <TextView
            style="@style/playerHeadlinesTextStyle"
            android:id="@+id/countryText"

            app:layout_constraintTop_toBottomOf="@id/genreText"
            app:layout_constraintStart_toEndOf="@id/left_guideline"

            android:text="@string/country" />

        <TextView
            android:id="@+id/timeTrack"
            style="@style/playerTrackInfoTextStyle"
            android:layout_marginTop="30dp"

            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintStart_toEndOf="@id/timeText"
            app:layout_constraintTop_toBottomOf="@id/tvTrackTimePlay"
            tools:text="@tools:sample/lorem/random" />
        <TextView
            android:id="@+id/album"
            style="@style/playerTrackInfoTextStyle"

            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintStart_toEndOf="@id/albumText"
            app:layout_constraintTop_toBottomOf="@id/timeTrack"
            tools:text="@tools:sample/lorem/random" />
        <TextView
            android:id="@+id/year"
            style="@style/playerTrackInfoTextStyle"

            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintStart_toEndOf="@id/yearText"
            app:layout_constraintTop_toBottomOf="@id/album"
            tools:text="@tools:sample/lorem/random" />
        <TextView
            android:id="@+id/genre"
            style="@style/playerTrackInfoTextStyle"

            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintStart_toEndOf="@id/genreText"
            app:layout_constraintTop_toBottomOf="@id/year"
            tools:text="@tools:sample/lorem/random" />
        <TextView
            android:id="@+id/country"
            style="@style/playerTrackInfoTextStyle"

            app:layout_constraintEnd_toStartOf="@id/right_guideline"
            app:layout_constraintStart_toEndOf="@id/countryText"
            app:layout_constraintTop_toBottomOf="@id/genre"
            tools:text="@tools:sample/lorem/random" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>